--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@types/react-image-gallery": "^1.2.0",
     "axios": "^1.5.0",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-image-gallery": "^1.3.0",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0"
   },
